# Embedded-Controller

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  helpers.cmake
PCB/v2/: .gitignore  controller_board.brd  controller_board.sch  eagle.epf
PCB/v3/: PCB v3.0 Parts.ods  Parts.txt  controller_board.b#1  controller_board.b#2  controller_board.b#3  controller_board.b#5  controller_board.b#6  controller_board.b#7  controller_board.b#8  controller_board.b#9  controller_board.brd  controller_board.pro  controller_board.s#1  controller_board.s#2  controller_board.s#4  controller_board.s#6  controller_board.s#7  controller_board.s#8  controller_board.s#9  controller_board.sch  eagle.epf
PCB/v3/GERBER_FILES/: controller_board_Legend_Bot.GBO  controller_board_Legend_Top.GTO  controller_board_Paste_Bot.GBP  controller_board_Paste_Top.GTP  controller_board_Profile_NP.GKO  controller_board_Soldermask_Bot.GBS  controller_board_Soldermask_Top.GTS  controller_board_copper_l1.GTL  controller_board_copper_l2.G1  controller_board_copper_l3.G2  controller_board_copper_l4.GBL  controller_board_drill.XLN  jlcpcb_4_layer_v9.cam
PCB/v3/GERBER_FILES/GerberJob/: gerber_job.gbrjob
PCB/v3/libraries/: 4628.lbr  B2B-PH-K-S_LF__SN_.lbr  B4B-PH-K-S_LF__SN_.lbr  PTVS24VS1UR.lbr  PTVS3V3S1UR.lbr  PTVS5V0S1UR.lbr  TMC2209_SILENTSTEPSTICK.lbr  tiny2040_headerd.lbr
src/: CMakeLists.txt  common.h  left_controller.c  main.c  right_controller.c  rondell_controller.c
src/Rondell/: rondell.c
src/com_protocol/: CMakeLists.txt  com_protocol.c
src/com_protocol/include/: com_protocol.h
src/common/: CMakeLists.txt
src/common/include/: common.h
src/controller/: CMakeLists.txt  helper.c  helper.h  left_controller.c  right_controller.c  rondell_controller.c  side_controller.c
src/dispenser/: CMakeLists.txt  dispenser.c  dispenser.h  dispenser_internal.h
src/dispenser/include/: dispenser.h
src/hardwareHelper/: CMakeLists.txt  helper.c  helper.h
src/limitSwitch/: CMakeLists.txt  limitSwitch.c  limitSwitch.h
src/motor/: CMakeLists.txt  motor.c  motor.h
src/rondell/: CMakeLists.txt  rondell.c  rondell.h  rondell_internal.h
src/serialUART/: CMakeLists.txt  serialUART.c  serialUART.h
src/tmc2209/: CMakeLists.txt  tmc2209.c  tmc2209.h  tmc2209_intern.h
test/integration/: CMakeLists.txt  integrationTest_adc.c  integrationTest_dispenser.c  integrationTest_limitSwitch.c  integrationTest_motor.c
test/unit/: CMakeLists.txt  test_comProtocol.c  test_dispenser.c  test_hardwareHelper.c  test_limitSwitch.c
test/unit/dummies/hardware/: gpio.c  gpio.h
test/unit/dummies/hardwareHelper/: helper.c
test/unit/dummies/limitSwitch/: limitSwitch.c
test/unit/dummies/pico/: time.h
test/unit/dummies/serialUART/: serialUART.h
test/unit/dummies/tmc2209/: tmc2209.c  tmc2209.h
